--- a/Calculator/Views/Shell.xaml
+++ b/Calculator/Views/Shell.xaml
@@ -10,66 +10,9 @@
         Title="{Binding Title}" Height="350" Width="320">
 
     <Window.Resources>
-        <Style TargetType="{x:Type Button}">
-            <Setter Property="MinWidth" Value="50"/>
-            <Setter Property="MinHeight" Value="50"/>
-            <Setter Property="Margin" Value="5"/>
-            <Setter Property="Command" Value="{Binding AddNumberCommand}"/>
-            <Setter Property="CommandParameter" Value="{Binding RelativeSource={RelativeSource Self}, Path=Content}"/>
-        </Style>
-        <Style TargetType="TextBox">
-            <Setter Property="Margin" Value="5"/>
-            <Setter Property="Height" Value="30"/>
-            <Setter Property="FontSize" Value="20"/>
-        </Style>
+        <ResourceDictionary Source="../Styles/Calculators/BasicCalculator.xaml"/>
     </Window.Resources>
+
+    <ContentControl Content="{Binding SelectedCalculatorViewModel}"/>
     
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-
-        <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="5"
-                 Text="{Binding ExpressionText}"/>
-
-        <Button Grid.Row="2" Grid.Column="1">7</Button>
-        <Button Grid.Row="2" Grid.Column="2">8</Button>
-        <Button Grid.Row="2" Grid.Column="3">9</Button>
-        <Button Grid.Row="2" Grid.Column="4">+</Button>
-        <Button Grid.Row="2" Grid.Column="5"
-                Command="{Binding ClearCommand}">CE</Button>
-
-        <Button Grid.Row="3" Grid.Column="1">4</Button>
-        <Button Grid.Row="3" Grid.Column="2">5</Button>
-        <Button Grid.Row="3" Grid.Column="3">6</Button>
-        <Button Grid.Row="3" Grid.Column="4">-</Button>
-        <Button Grid.Row="3" Grid.Column="5"
-                Command="{Binding EqualsCommand}">=</Button>
-
-        <Button Grid.Row="4" Grid.Column="1">1</Button>
-        <Button Grid.Row="4" Grid.Column="2">2</Button>
-        <Button Grid.Row="4" Grid.Column="3">3</Button>
-        <Button Grid.Row="4" Grid.Column="4">*</Button>
-
-        <Button Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2">0</Button>
-        <Button Grid.Row="5" Grid.Column="3">.</Button>
-        <Button Grid.Row="5" Grid.Column="4">/</Button>
-    </Grid>
 </Window>
