--- a/Calculator/Styles/Buttons/KeyPad.xaml
+++ b/Calculator/Styles/Buttons/KeyPad.xaml
@@ -1,15 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:mahApps="http://metro.mahapps.com/winfx/xaml/controls"
                     xmlns:local="clr-namespace:Calculator.Styles.Buttons">
-    <Style TargetType="{x:Type Button}">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="../MahMetroBindings.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
+
+    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource SquareButtonStyle}">
         <Setter Property="MinWidth" Value="50"/>
         <Setter Property="MinHeight" Value="50"/>
-        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Margin" Value="2"/>
+        <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="Command" Value="{Binding AddNumberCommand}"/>
         <Setter Property="CommandParameter" Value="{Binding RelativeSource={RelativeSource Self}, Path=Content}"/>
     </Style>
     <Style TargetType="TextBox">
-        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Margin" Value="2"/>
         <Setter Property="Height" Value="30"/>
         <Setter Property="FontSize" Value="20"/>
     </Style>
